--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ script:
 # Defini que o processo de Deploy será na Plataforma Heroku. É necessário informar o nome da APP criada no Heroku
 deploy:
   provider: heroku
-  api-key: 
+  api-key: 090a85fd-dcd4-4ce4-9cf9-82e2c669395e:W
     secure: $HEROKU_API_KEY
   app: devopslabs-helloworldalex
